--- a/app/styles/travelbook.css
+++ b/app/styles/travelbook.css
@@ -27,13 +27,13 @@ body {
 
 .day-container {
   flex-grow: 1;
-  min-width: 150px;
-  height: 150px;
-  border: 1px solid black;
+  min-width: 200px;
+  height: 200px;
+  border: 1px solid #252525;
 }
 
 .day {
-  background-size: cover;
+  background-size: 100% 100%;
   height: 100%;
   width: 100%;
 }
