--- a/app/styles/travelbook.css
+++ b/app/styles/travelbook.css
@@ -1,6 +1,8 @@
 body {
   background-color: #1d1d1d;
   color: #eee;
+  margin: 0;
+  padding: 0;
 }
 
 #app-container {
@@ -76,6 +78,42 @@ body {
   width: 250px;
 }
 
-button {
+button, input {
   color: #333;
+}
+
+.travel-map {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+.travel-map-playback-controls,
+.travel-map-controls {
+  z-index: 100;
+  position: absolute;
+}
+.travel-map-playback-controls {
+  left: 200px;
+}
+
+.autocomplete-result {
+  background: #eee;
+  color: #333;
+  cursor: pointer;
+  padding: 2px 10px;
+}
+
+.autocomplete-result.highlighted {
+  background-color: #cacaca;
+}
+
+#location-search-results ul {
+  padding: 0;
+}
+
+#location-search-results li {
+  list-style-type: none;
 }
