--- a/app/styles/travelbook.css
+++ b/app/styles/travelbook.css
@@ -122,3 +122,52 @@ button, input {
   background-color: #333;
   padding: 10px;
 }
+
+
+
+.track-inspector {
+  background-color: #333;
+}
+
+.track-inspector h1 {
+  font-size: 1.1em;
+}
+
+
+.tracks {
+  display: table;
+  /* TODO */
+  width: 500px;
+}
+.track {
+  display: table-row;
+}
+
+.track-name {
+  width: 200px;
+  display: table-cell;
+}
+
+.track-keyframes {
+  height: 10px;
+  display: table-cell;
+  position: relative;
+  padding-top: 5px;
+}
+
+.track-time-ruler {
+  height: 10px;
+}
+
+.track-time-ruler canvas {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.track-keyframe {
+  background-color: red;
+  height: 10px;
+  width: 2px;
+  position: absolute;
+}
